tests/files/type_checker_tests/should_fail/192.cmdr
//Should fail if using variable out of scope
{
    a = 3;
    println a;
}
println a;
